--- a/apache.yaml
+++ b/apache.yaml
@@ -178,28 +178,13 @@ kind: Service
 metadata:
   name: apache-service
 spec:
+  type: NodePort
   ports:
   - name: http
     targetPort: 80
     port: 80
   selector:
     app: apache
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: apache-ingress
-  annotations:
-    kubernetes.io/ingress.class: traefik
-spec:
-  rules:
-  - host: www.apache.test
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: apache-service
-          servicePort: http
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
